--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@testing-library/dom": "^10.4.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
@@ -10,6 +11,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.24.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
