--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap-icons": "^1.13.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.1",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.24.0",
     "web-vitals": "^2.1.4"
@@ -45,11 +45,12 @@
     "@babel/preset-react": "^7.27.1",
     "@testing-library/jasmine-dom": "^1.3.3",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
-    "babel-jest": "^30.2.0",
     "babel-loader": "^10.0.0",
-    "jasmine-core": "^5.11.0",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "jasmine-core": "^5.12.0",
     "karma": "^6.4.4",
     "karma-babel-preprocessor": "^8.0.2",
     "karma-chrome-launcher": "^3.2.0",
@@ -60,6 +61,10 @@
     "karma-spec-reporter": "^0.0.36",
     "karma-webpack": "^5.0.1",
     "null-loader": "^4.0.1",
-    "react-test-renderer": "^19.2.0"
+    "react-test-renderer": "^19.2.0",
+    "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1"
   }
 }
